Finalmente implementado corretamente a funcionalidade de mostrar a localização do pet encontrado no mapa.
Fica a dica se alguem ler isso: Implementação server-side foi um
inferno, gastei horas para fazer corretamente

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,12 @@
 
         <activity
             android:name=".PetLocationActivity"
-            android:label="@string/title_activity_pet_location"></activity>
+            android:label="@string/title_activity_pet_location">
+            <intent-filter>
+                <action android:name="OPEN_MAP_ACTIVITY" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
