--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -39,6 +40,7 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     compile 'com.google.android.gms:play-services:9.8.0'
     compile 'com.loopj.android:android-async-http:1.4.9'
+    compile 'com.paypal.sdk:paypal-android-sdk:2.15.1'
     testCompile 'junit:junit:4.12'
 }
 
