--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoTitleBar">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PetDataActivity" />
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".PetDataActivity" android:screenOrientation="portrait" />
+        <activity android:name=".LoginActivity" android:screenOrientation="portrait" />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
@@ -31,17 +31,17 @@
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:label="@string/app_name" />
-        <activity android:name=".RegisterActivity" />
-        <activity android:name=".PetVaultActivity" />
-        <activity android:name=".PetRegisterActivity" />
+            android:label="@string/app_name" android:screenOrientation="portrait" />
+        <activity android:name=".RegisterActivity" android:screenOrientation="portrait" />
+        <activity android:name=".PetVaultActivity" android:screenOrientation="portrait" />
+        <activity android:name=".PetRegisterActivity" android:screenOrientation="portrait" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
              Note that the API key is linked to the encryption key used to sign the APK.
              You need a different API key for each encryption key, including the release key that is used to
              sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -49,7 +49,7 @@
 
         <activity
             android:name=".PetLocationActivity"
-            android:label="@string/title_activity_pet_location">
+            android:label="@string/title_activity_pet_location" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="OPEN_MAP_ACTIVITY" />
                 <category android:name="android.intent.category.DEFAULT" />
