--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" android:screenOrientation="portrait" />
         <activity android:name=".RegisterActivity" android:screenOrientation="portrait" />
-        <activity android:name=".PetVaultActivity" android:screenOrientation="portrait" />
+        <activity android:name=".PetVaultActivity" android:screenOrientation="portrait" android:theme="@style/AppTheme" />
         <activity android:name=".PetRegisterActivity" android:screenOrientation="portrait" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
